--- a/main.html
+++ b/main.html
@@ -1,16 +1,89 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Basic News Webpage</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background-color: #f5f5f5;
+        }
+
+        .header {
+            background-color: #011e29;
+            color: white;
+            text-align: center;
+            padding: 20px 0;
+        }
+
+        .latest-news-section {
+            background-color: white;
+            padding: 20px;
+            margin: 20px auto;
+            width: 80%;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        .latest-news-section h2 {
+            margin-bottom: 10px;
+        }
+
+        .latest-news-section ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        .latest-news-section li {
+            margin-bottom: 8px;
+            padding: 10px;
+            border-bottom: 1px solid #ddd;
+        }
+
+        .latest-news-section li:last-child {
+            border-bottom: none;
+        }
+
+        .pictorial-news-section {
+            background-color: #ffffff;
+            padding: 20px;
+            margin: 20px auto;
+            width: 80%;
+            text-align: center;
+            border-radius: 10px;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        .pictorial-news-section img {
+            width: 30%;
+            margin: 10px;
+            border-radius: 10px;
+        }
+    </style>
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <header class="header">
+        <h1>Basic News Webpage</h1>
+    </header>
 
+    <div class="latest-news-section">
+        <h2>Latest News</h2>
+        <ul>
+            <li>Breaking News: Global markets rally amid economic recovery hopes.</li>
+            <li>Technology: New AI breakthrough promises to transform industries.</li>
+            <li>Sports: Local team clinches championship in dramatic final match.</li>
+        </ul>
+    </div>
+
+    <div class="pictorial-news-section">
+        <h2>Pictorial News</h2>
+        <img src="image_one.jpg" alt="News Image One">
+        <img src="image_two.jpg" alt="News Image Two">
+        <img src="image_three.jpg" alt="News Image Three">
+    </div>
 </body>
 
 </html>
