--- a/main.html
+++ b/main.html
@@ -80,9 +80,9 @@
 
     <div class="pictorial-news-section">
         <h2>Pictorial News</h2>
-        <img src="image_one.jpg" alt="News Image One">
-        <img src="image_two.jpg" alt="News Image Two">
-        <img src="image_three.jpg" alt="News Image Three">
+        <img src="https://images.hindustantimes.com/img/2023/01/29/550x309/delhi_rains_1674974112847_1674981888135_1674981888135.jpeg" alt="News Image One">
+        <img src="https://images.hindustantimes.com/img/2023/01/29/550x309/ADANI-INDIA-GAUTAM-ADANI-0_1675011651023_1675011651023_1675011672003_1675011672003.JPG" alt="News Image Two">
+        <img src="https://images.hindustantimes.com/img/2023/01/29/550x309/FRANCE-REFORM-PENSIONS-31_1675022359706_1675022359706_1675022383851_1675022383851.JPG" alt="News Image Three">
     </div>
 </body>
 
