--- a/main.html
+++ b/main.html
@@ -66,19 +66,19 @@
 
 <body>
     <header class="header">
-        <h1>Basic News Webpage</h1>
+        <h1>Shaw's News</h1>
     </header>
 
     <div class="latest-news-section">
        <h3>Latest News</h3>
-
         <ul>
-            <li>Breaking News: Global markets rally amid economic recovery hopes.</li>
-            <li>Technology: New AI breakthrough promises to transform industries.</li>
-            <li>Sports: Local team clinches championship in dramatic final match.</li>
+            <li>Artcle 1</li>
+            <li>Artcle 2</li>
+            <li>Artcle 3</li>
         </ul>
     </div>
-
+<main>
+	<h2 style="text-align:center">Main Article</h2><p style="text-align:center">bdeincsdn jfnjhfweuhiejfsdn dkehoeifejasb jgfdoqeif0[efbdca kusgdd;sdkfdj abcshfiwv</p></main>
     <div class="pictorial-news-section">
         <h2>Pictorial News</h2>
         <img src="https://images.hindustantimes.com/img/2023/01/29/550x309/delhi_rains_1674974112847_1674981888135_1674981888135.jpeg" alt="News Image One">
